<resources>
    <string name="app_name">Raider Status</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_header_subtitle">If you want people to think you\'re crazy, \ntell the truth.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_home">Tavern</string>
    <string name="subtitle_home">Next Period date and Affixes Information</string>
    <string name="title_character">Character</string>
    <string name="subtitle_character">Information about your characters</string>
    <string name="title_guild_list">Guilds (UA)</string>
    <string name="subtitle_guild_list">Explore the top guilds in Ukraine</string>
    <string name="title_about">About</string>
    <string name="subtitle_about">Delusion about us</string>
    
    <string name="mythic_plus">M+ weekly Affixes</string>
    <string name="home_reboot_next">Next period</string>
    <string name="home_reboot">Period information</string>

    <string name="char_name_title">Name:</string>
    <string name="char_realm_title">Realm:</string>
    <string name="char_region_title">Region:</string>
    <string name="char_dialog_title">Adding a character</string>

    <string name="alliance">Alliance</string>
    <string name="horde">Horde</string>
    <string name="unknown_faction">Unknown</string>
    <string name="raids_title">Raids</string>
    <string name="raids_one">Aberrus</string>
    <string name="raids_two">Incarnates</string>
    <string name="race_title">Race</string>
    <string name="class_title">Class</string>
    <string name="guild_title">Guild</string>

    <!-- About -->
    <string name="love"><![CDATA[</> with ❤️ by Dmytro Halytskyi]]></string>
    <string name="follow">Follow Us</string>
    <string name="support">Support Us</string>
    <string name="support_us_desc">Raider Status is, and always will be, free, and ad-free. You can show your support by making a donation, but please consider donating to the Armed Forces of Ukraine (ZSU), as it is thanks to them that I was able to create this program.</string>

    <!-- Button -->
    <string name="donate">Donate</string>

    <string name="empty">No found</string>

    <string name="menu_open_in_browser">Open in browser</string>
    <string name="menu_copy_link">Copy link</string>
    <string name="copied_to_clipboard">Link copied to clipboard</string>

    <string name="todo" translatable="false">TODO</string>
</resources>