<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.craftrom.raiderstatus.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_char"
            app:destination="@id/nav_char"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_home_to_nav_about"
            app:destination="@id/nav_about"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_char"
        android:name="com.craftrom.raiderstatus.ui.character.CharacterFragment"
        android:label="@string/title_character"
        tools:layout="@layout/fragment_character" >
        <action
            android:id="@+id/action_nav_char_to_nav_about"
            app:destination="@id/nav_about"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_char_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.craftrom.raiderstatus.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_nav_about_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_about_to_nav_char"
            app:destination="@id/nav_char"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />
    </fragment>

</navigation>