<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/status_bar"
            android:paddingTop="24dp"
            android:paddingBottom="@dimen/l1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:clickable="true"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_logo" />

            <LinearLayout
                android:id="@+id/firstLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/app_name"
                    android:text="@string/app_name"
                    style="@style/TextViewStyle"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/br"
                    android:text="@string/love"
                    style="@style/TextViewStyle"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/version"
                    style="@style/TextViewStyle"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="sans-serif-condensed"
                    tools:text="TextView" />
            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/l1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewAboutUs"
                    style="@style/WidgetFoundation.Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_generic"
                    android:layout_marginVertical="@dimen/l_50"
                    tools:layout_gravity="center">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/overlain"
                        android:paddingStart="@dimen/l1"
                        android:paddingEnd="@dimen/l1">

                        <TextView
                            android:id="@+id/tv_follow_us"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/follow"
                            android:textAppearance="@style/AppearanceFoundation.Title"
                            android:textColor="?colorPrimary"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/desc_about"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/overlain"
                            android:text="@string/unknown_faction"
                            android:textAppearance="@style/AppearanceFoundation.Body"
                            app:layout_constraintTop_toBottomOf="@+id/tv_follow_us" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.card.MaterialCardView
                    style="@style/WidgetFoundation.Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/l1"
                    android:layout_marginTop="@dimen/l1"
                    android:layout_marginEnd="@dimen/l1"
                    android:focusable="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/l1"
                        android:paddingBottom="@dimen/l1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/l1"
                            android:layout_marginEnd="@dimen/l1"
                            android:text="@string/support"
                            android:textAppearance="@style/AppearanceFoundation.Title" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/l1"
                            android:layout_marginTop="@dimen/l_50"
                            android:layout_marginBottom="@dimen/l_50"
                            android:layout_marginEnd="@dimen/l1"
                            android:text="@string/support_us_desc"
                            android:textAppearance="@style/AppearanceFoundation.Caption.Variant" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/l1"
                            android:layout_marginEnd="@dimen/l1">


                            <Button
                                android:id="@+id/about_donate"
                                style="@style/WidgetFoundation.Button.Text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:text="@string/donate"
                                android:textAllCaps="false"
                                app:icon="@drawable/ic_donut"
                                app:iconSize="24dp"/>

                        </FrameLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>